--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 DATASET_PATH=data/raw/conversations.csv
 TOXICITY_THRESHOLD=0.5
 OUTPUT_DIR=outputs
+
+# Kafka configuration
+KAFKA_ENABLED=true
+KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+KAFKA_TOPIC=guardrail.violations
+
+# Alert consumer configuration
+ALERT_WINDOW_SIZE_SECONDS=300
+ALERT_OUTPUT_FILE=outputs/alerts.jsonl
+ALERT_CONSUMER_GROUP=alert-consumer-group
