--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,29 @@
+# Core ML/NLP dependencies
 guardrails-ai>=0.4.0
 detoxify
 torch
 transformers
+
+# Data processing
 pandas>=2.0.0
+
+# Configuration and logging
 python-dotenv
 loguru
+
+# Kafka integration
+kafka-python>=2.0.2
+
+# Testing
 pytest>=7.4.0
+pytest-mock>=3.12.0
+pytest-cov>=4.1.0
+
+# Code quality (optional)
+black>=23.0.0
+flake8>=6.1.0
+isort>=5.12.0
+
+# Type checking (optional)
+mypy>=1.5.0
+types-requests
