mock producer with kafka integration

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,8 @@ KAFKA_TOPIC=guardrail.violations
 ALERT_WINDOW_SIZE_SECONDS=300
 ALERT_OUTPUT_FILE=outputs/alerts.jsonl
 ALERT_CONSUMER_GROUP=alert-consumer-group
+
+# Kafka input processor configuration
+KAFKA_INPUT_TOPIC=llm.conversations
+KAFKA_INPUT_CONSUMER_GROUP=guardrail-input-processor-group
+KAFKA_INPUT_OUTPUT_FILE=outputs/kafka_violations.jsonl
