multiple docker scaling

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@ DATASET_PATH=data/raw/conversations.csv
 TOXICITY_THRESHOLD=0.5
 OUTPUT_DIR=outputs
 
+# Guardrails AI Hub Token (required for Docker builds)
+# Get your token from: https://hub.guardrailsai.com/keys
+GUARDRAILS_TOKEN=your_token_here
+
 # Kafka configuration
 KAFKA_ENABLED=true
 KAFKA_BOOTSTRAP_SERVERS=localhost:9092
