update readme and auto download, 10 partitions on conversation topic

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ OUTPUT_DIR=outputs
 # Get your token from: https://hub.guardrailsai.com/keys
 GUARDRAILS_TOKEN=your_token_here
 
+#hugging faace token
+HF_TOKEN=your_token_here
+
 # Kafka configuration
 KAFKA_ENABLED=true
 KAFKA_BOOTSTRAP_SERVERS=localhost:9092
