--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - "9092:9092"
       - "9101:9101"
     environment:
+      KAFKA_NUM_PARTITIONS: 10
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       # 1. Map the protocols
